2010-03-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_regionprops.m:

	- SCINRRD_REGIONPROPS Measure properties of image regions on each
	slice.

2010-03-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/extmat2rotmat.m, PointsToolbox/rotmat2extmat.m:

	- Add input argument "center", so that we can choose the
	transformation A(X-M) instead of A(X-M)+M. This will center the
	heart around the origin of coordinates, and it also allows to use
	a well-conditioned system to be used in extmat2rotmat.

	* FiltersToolbox/scinrrd_vertical_orientation_pca_basis.m:

	- Remove input argument "type". We are computing an orientation
	basis, not a rotation matrix, so there's no point in having "type"
	to select between A or A'.

	* Rename scinrrd_vertical_rot3.m as
	scinrrd_vertical_orientation_pca_basis.m:

	- We are computing the orientation basis, not a rotation matrix.

	* FiltersToolbox/scinrrd_vertical_rot3.m:

	- Make sure that the orientation of the resulting basis is the
	same as the Cartesian system. 

	The problem is that the basis is valid if we take the negative of
	any of its vectors too. For example, the Cartesian system has
	positive orientation because [1 0 0] x [0 1 0] = [0 0 1]. But
	scinrrd_vertical_rot3() could also produce the basis with negative
	orientation [-1 0 0], [0 1 0], [0 0 1].

	To avoid this, we make sure that the "Z" vector is going up,
	and then change the sign of "X", if necessary.

2010-03-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add CardiacToolbox, a directory to keep functions that are only
	relevant to cardiac image processing.

	* Add FiltersToolbox/scinrrd_papillary_muscles.m:

	- Extract the papillay muscles from a segmentation of the Left
	Ventricle's cavity.

	* Add FileFormatToolbox/scinrrd_save.m:

	- SCINRRD_SAVE Save a NRRD struct to a Matlab format that can be
	imported by Seg3D.

	* Add FiltersToolbox/scinrrd_unsqueeze.m:
